--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -7,18 +8,17 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.0"
   },
   "name": "backend",
   "version": "1.0.0",
-  "devDependencies": {},
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-      "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
-  
   "author": "",
   "license": "ISC",
   "description": ""
