--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
