--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
+    "socket.io-client": "^4.8.0",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
